syntax = "proto3";

package ledger.ledger;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ledger/ledger/params.proto";
import "ledger/ledger/ledger.proto";

option go_package = "ledger/x/ledger/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ledger/ledger/params";
  
  }
  
  // Queries a list of ShowLedger items.
  rpc ShowLedger (QueryShowLedgerRequest) returns (QueryShowLedgerResponse) {
    option (google.api.http).get = "/ledger/ledger/show_ledger/{id}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryShowLedgerRequest {
  uint64 id = 1;
}

message QueryShowLedgerResponse {
  Ledger ledger = 1;
}

